apps/openshift/summon-simple-golang-app/deployment.yml

---
apiVersion: v1
kind: Service
metadata:
  name: summon-app-service
  namespace: test-app-namespace
spec:
  type: LoadBalancer
  selector:
    app: summon-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summon-app
  namespace: test-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summon-app
  template:
    metadata:
      labels:
        app: summon-app
    spec:
      serviceAccountName: test-app-sa
      containers:
      - name: summon-app-container
        image: quincycheng/summon-simple-golang-app:v1.0.2
        ports:
        - containerPort: 8080
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: summon-app-route
  namespace: test-app-namespace
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: summon-app-service
---
